[gd_scene load_steps=12 format=3 uid="uid://dane34c5ixkkf"]

[ext_resource type="Script" path="res://Imports/Scene_Code/rifle.gd" id="1_n01qq"]
[ext_resource type="AudioStream" uid="uid://7kjltyxqy2cb" path="res://audio/lever.mp3" id="1_vlprc"]
[ext_resource type="AudioStream" uid="uid://drhgstajtx21" path="res://audio/gunshot.mp3" id="2_2ce0v"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u40rg"]
angle_min = -70.0
angle_max = 70.0
direction = Vector3(-1, 0, -1)
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 0)

[sub_resource type="Gradient" id="Gradient_a3l6x"]
colors = PackedColorArray(1, 0.443137, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xha4m"]
gradient = SubResource("Gradient_a3l6x")
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6gktj"]
transparency = 1
albedo_texture = SubResource("GradientTexture2D_xha4m")
roughness = 0.0
emission_enabled = true
emission_energy_multiplier = 16.0
emission_texture = SubResource("GradientTexture2D_xha4m")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_fagu5"]
material = SubResource("StandardMaterial3D_6gktj")
size = Vector2(0.25, 0.25)

[sub_resource type="Animation" id="Animation_6wwsr"]
resource_name = "Fire"
length = 1.5
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Muzzle_Light:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rack:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Muzzle_Light:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 0.715),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [700.0, 1000.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Muzzle_Particles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Gun_Shot_Audio:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.656403),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cqtag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Muzzle_Light:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rack:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Muzzle_Light:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [500.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Muzzle_Particles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Gun_Shot_Audio:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u7uu0"]
_data = {
"Fire": SubResource("Animation_6wwsr"),
"RESET": SubResource("Animation_cqtag")
}

[node name="Rifle" type="Node3D"]
script = ExtResource("1_n01qq")

[node name="Muzzle_Particles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0577511)
layers = 2
emitting = false
lifetime = 0.05
one_shot = true
explosiveness = 1.0
fixed_fps = 60
local_coords = true
process_material = SubResource("ParticleProcessMaterial_u40rg")
draw_pass_1 = SubResource("QuadMesh_fagu5")

[node name="Front_Marker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.596677)

[node name="Muzzle_Light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.865826)
visible = false
layers = 2
light_color = Color(0.99033, 0.343882, 0.201113, 1)
light_energy = 500.0
omni_range = 4096.0

[node name="Gun_Shot_Audio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.195014)
stream = ExtResource("2_2ce0v")

[node name="Rack" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.195014)
visible = false
stream = ExtResource("1_vlprc")
volume_db = -10.0

[node name="Fire_Player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u7uu0")
}

[connection signal="animation_finished" from="Fire_Player" to="." method="_on_fire_player_animation_finished"]
